Empty grease pencil objects have infinite dimensions #62743

Closed
opened 2019-03-19 12:30:44 +01:00 by Kai Jægersen · 3 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17

Blender Version
Broken: version: 2.80 (sub 50), branch: master, commit date: 2019-03-18 21:39, hash: d47f827019
Worked: (optional)

Short description of error
Querying the dimensions of empty grease pencil objects using obj.bound_box and obj.dimensions property, produces non-zero values. However, once strokes are added to them, the dimensions show correctly.

Exact steps for others to reproduce the error

  1. Shift-A and add a blank grease pencil object.
  2. In the interactive console, query its dimensions:
    >>> C.object.dimensions
    Vector((-2.0000000300949324e+30, -2.0000000300949324e+30, -2.0000000300949324e+30))

Alternatively:

  1. Shift-A and add a 'Stroke' or 'Monkey' GP object:
  2. Enter edit mode and delete all its points
  3. Query its dimensions from the interactive console as above (same result)

It's hardly an inconvenience, but thought it best to report since the current values do not align with other empty-like objects in blender.

Please see gif and blend if you need further details of this.

gpo_dimensions.gif
gpo_dimensions.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17 **Blender Version** Broken: version: 2.80 (sub 50), branch: master, commit date: 2019-03-18 21:39, hash: `d47f827019` Worked: (optional) **Short description of error** Querying the dimensions of empty grease pencil objects using `obj.bound_box` and `obj.dimensions` property, produces non-zero values. However, once strokes are added to them, the dimensions show correctly. **Exact steps for others to reproduce the error** 1. Shift-A and add a blank grease pencil object. 2. In the interactive console, query its dimensions: ``` >>> C.object.dimensions Vector((-2.0000000300949324e+30, -2.0000000300949324e+30, -2.0000000300949324e+30)) ``` Alternatively: 1. Shift-A and add a 'Stroke' or 'Monkey' GP object: 2. Enter edit mode and delete all its points 3. Query its dimensions from the interactive console as above (same result) It's hardly an inconvenience, but thought it best to report since the current values do not align with other empty-like objects in blender. Please see gif and blend if you need further details of this. ![gpo_dimensions.gif](https://archive.blender.org/developer/F6849213/gpo_dimensions.gif) [gpo_dimensions.blend](https://archive.blender.org/developer/F6849219/gpo_dimensions.blend)
Author

Added subscriber: @KaiJaegersen

Added subscriber: @KaiJaegersen

This issue was referenced by c001a9c3b6

This issue was referenced by c001a9c3b6fcee5a31296441d62d99d3ee49b477
Antonio Vazquez self-assigned this 2019-03-19 13:54:49 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62743
No description provided.